# tabmat

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  BENCHMARK_README.md  BLAS_INTEGRATION_RESULTS.md  BRANCH_SUMMARY.md  CHANGELOG.rst  CONTRIBUTING.md  Cargo.toml  LICENSE  PROFILING_SUMMARY.md  README.md  RUST_CPP_COMPARISON.md  RUST_MIGRATION.md  SECURITY.md  SPARSE_OPTIMIZATION_SUMMARY.md  arm64_prepare_wheel_build.sh  benchmark_rust_vs_cpp.py  build_and_launch  check_cpp_impl.py  cpp_large_narrow.json  cpp_results.json  cpp_xlarge.json  environment-win.yml  environment.yml  example.py  pixi.toml  pyproject.toml  pytest.ini  run_comparison_benchmark.sh  rust_large_narrow.json  rust_quick_demo.json  rust_results.json  rust_sparse_opt.json  rust_sparse_opt_xlarge.json  rust_xlarge.json  rust_xlarge_optimized.json  setup.py
.ci_support/: linux_64_python3.10.____cpython.yaml  linux_64_python3.10_default.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  linux_64_python3.12_default.____cpython.yaml  linux_64_python3.13.____cp313.yaml  linux_64_python3.13_default.____cpython.yaml  linux_64_python3.7_default.____cpython.yaml  linux_64_python3.8_default.____cpython.yaml  linux_64_python3.9_default.____cpython.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.10_default.____cpython.yaml  linux_aarch64_python3.11.____cpython.yaml  linux_aarch64_python3.12.____cpython.yaml  linux_aarch64_python3.13.____cp313.yaml  linux_ppc64le_python3.10_default.____cpython.yaml  osx_64_python3.10.____cpython.yaml  osx_64_python3.10_default.____cpython.yaml  osx_64_python3.11.____cpython.yaml  osx_64_python3.11_default.____cpython.yaml  osx_64_python3.12.____cpython.yaml  osx_64_python3.12_default.____cpython.yaml  osx_64_python3.13.____cp313.yaml  osx_64_python3.13_default.____cpython.yaml  osx_64_python3.7.____cpython.yaml  osx_64_python3.7_default.____cpython.yaml  osx_64_python3.7_skylake.____cpython.yaml  osx_64_python3.8.____cpython.yaml  osx_64_python3.8_default.____cpython.yaml  osx_64_python3.8_skylake.____cpython.yaml  osx_64_python3.9.____cpython.yaml  osx_64_python3.9_default.____cpython.yaml  osx_arm64_python3.10.____cpython.yaml  osx_arm64_python3.11.____cpython.yaml  osx_arm64_python3.12.____cpython.yaml  osx_arm64_python3.13.____cp313.yaml  osx_arm64_python3.13.____cpython.yaml  osx_arm64_python3.9.____cpython.yaml  win_64_python3.10.____cpython.yaml  win_64_python3.11.____cpython.yaml  (+6 more)
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/actions/unittests/: action.yml
.github/workflows/: build-wheels.yml  build_wheels.yml  build_wheels_release.yml  ci.yml  conda-build-linux-main.yml  conda-build-linux-master.yml  conda-build-macos.yml  conda-build-win.yml  conda-build.sh  conda-build.yml  daily.yml  macos-conda-build.sh  macos-tag.sh  macos.sh  package.yml  pre-commit.sh  scorecard.yml  tag.sh  tag.yml  test.sh  tests-macos-main.yml  tests-macos-master.yml  tests-macos.yml  tests-win-main.yml  tests-win-master.yml  tests-win.yml
benchmark/: generate_matrices.py  main.py  run_benchmarks.py  visualize_benchmarks.ipynb
build_tools/: prepare_macos_wheel.sh
conda.recipe/: conda_build_config.yaml  meta.yaml  recipe.yaml
docs/: api.rst  benchmarks.rst  conf.py  index.rst
rust_ext/: Cargo.toml
rust_ext/src/: categorical.rs  dense.rs  lib.rs  sparse.rs
rust_src/: categorical.rs  dense.rs  lib.rs  sparse.rs  split.rs
src/quantcore/matrix/: __init__.py  categorical_matrix.py  constructor.py  dense_glm_matrix.py  dense_matrix.py  glm_matrix.py  matrix_base.py  mkl_sparse_matrix.py  pandas.py  sparse_matrix.py  split_matrix.py  standardized_mat.py  util.py
src/quantcore/matrix/benchmark/: generate_matrices.py  main.py  memory_tools.py  visualize_benchmarks.ipynb  visualize_benchmarks.py
src/quantcore/matrix/ext/: cat_split_helpers-tmpl.cpp  categorical.pyx  dense.pyx  sparse.pyx  split.pyx
src/tabmat/: __init__.py  categorical_matrix.py  constructor.py  constructor_util.py  dense_matrix.py  formula.py  matrix_base.py  sparse_matrix.py  split_matrix.py  standardized_mat.py  util.py
src/tabmat/benchmark/: generate_matrices.py  main.py  memory_tools.py  visualize_benchmarks.py
src/tabmat/ext/: _ops.py  alloc.h  backend.py  cat_split_helpers-tmpl.cpp  categorical.pyx  categorical_dispatch.py  dense.pyx  dense_dispatch.py  dense_helpers-tmpl.cpp  rust_compat.py  sparse.pyx  sparse_dispatch.py  sparse_helpers-tmpl.cpp  split.pyx  split_dispatch.py
src/tabmat/tabmat_rust_ext/: __init__.py
tests/: real_matrix.pkl  test_benchmark_cli.py  test_big_categorical_matrix.py  test_categorical_matrix.py  test_constructor.py  test_fast_sandwich.py  test_float32.py  test_formula.py  test_matrices.py  test_mkl_sparse_matrix.py  test_real_matrix.py  test_reproducibility.py  test_split_matrix.py  test_standardized_mat.py  test_transpose_matvec.py
