[package]
name = "tabmat"
version = "4.0.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "tabmat_ext"
crate-type = ["cdylib"]
path = "rust_src/lib.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
ndarray = "0.16"
rayon = "1.10"
num-traits = "0.2"
wide = "0.7"
accelerate-src = "0.3"
cblas-sys = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0

[features]
default = []
