[build-system]
requires = [
  'setuptools',
  'setuptools-scm',
  'wheel',
  'mako',
  'numpy>=1.25',
  'Cython != 3.0.4',
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
ignore = ["E731", "N802", "N803", "N806"]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["tabmat"]

[tool.mypy]
python_version = '3.9'
exclude = [
  "tests/",
]
no_implicit_optional = false
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.cibuildwheel]
skip = [
  "*-win32",
  "*-manylinux_i686",
  "pp*",
  "*-musllinux_*",
  "cp36*",
  "cp37*",
  "cp38*",
]
test-requires = ["pytest", "pytest-xdist"]
test-command = "pytest {package}/tests/test_matrices.py"
# note: ARCHS_LINUX defined in build_wheels.yml file.

[tool.cibuildwheel.macos]
before-build = [
  "/Users/runner/micromamba-bin/micromamba create -y -p $MAMBA_ROOT_PREFIX/envs/build -c conda-forge jemalloc-local \"xsimd<11|>12.1\" llvm-openmp",
]

[tool.cibuildwheel.macos.environment]
LDFLAGS="-Wl,-rpath,$MAMBA_ROOT_PREFIX/envs/build/lib -L$MAMBA_ROOT_PREFIX/envs/build/lib -headerpad_max_install_names"
CFLAGS="-I$MAMBA_ROOT_PREFIX/envs/build/include"
CXXFLAGS="-I$MAMBA_ROOT_PREFIX/envs/build/include"
CXX="/usr/bin/clang++"
CC="/usr/bin/clang"
JE_INSTALL_SUFFIX="local"
MACOSX_DEPLOYMENT_TARGET="12.0"

[tool.cibuildwheel.windows]
before-all = [
  "C:\\Users\\runneradmin\\micromamba-bin\\micromamba.exe create -y -p envs\\build -c conda-forge \"xsimd<11|>12.1\""
]

[tool.cibuildwheel.windows.environment]
INCLUDE="D:\\\\a\\\\tabmat\\\\tabmat\\\\envs\\\\build\\\\Library\\\\include"

[tool.cibuildwheel.linux]
before-all = [
  "cd ~/",
  "git clone --branch 5.3.0 https://github.com/jemalloc/jemalloc.git",
  "cd jemalloc",
  "./autogen.sh --disable-cxx --with-jemalloc-prefix=local --with-install-suffix=local --disable-tls --disable-initial-exec-tls",
  "make",
  "make install_bin install_include install_lib",
  "cd ~/",
  "git clone --branch 12.1.1 https://github.com/xtensor-stack/xsimd.git",
  "cd xsimd",
  "mkdir build",
  "cd build",
  "cmake -DCMAKE_INSTALL_PREFIX=/usr/local ..",
  "make install"
]
