[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tabmat"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24.0",
  "pandas>=1.4.4",
  "scipy>=1.7.3",
  "formulaic>=0.6.4",
  "narwhals>=1.4.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tabmat.ext.tabmat_ext"
python-source = "src"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
ignore = ["E731", "N802", "N803", "N806"]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["tabmat"]

[tool.mypy]
python_version = '3.9'
exclude = [
  "tests/",
]
no_implicit_optional = false
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.cibuildwheel]
skip = [
  "*-win32",
  "*-manylinux_i686",
  "pp*",
  "*-musllinux_*",
  "cp36*",
  "cp37*",
  "cp38*",
]
test-requires = ["pytest", "pytest-xdist"]
test-command = "pytest {package}/tests/test_matrices.py"
# note: ARCHS_LINUX defined in build_wheels.yml file.


