[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tabmat"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "pandas>=1.4.4",
  "scipy>=1.7.3",
  "formulaic>=0.6.4",
  "narwhals>=1.4.1",
]
description = "Efficient matrix representations for working with tabular data."
readme = "README.md"
authors = [
  { name = "QuantCo, Inc.", email = "noreply@quantco.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/Quantco/tabmat"
Repository = "https://github.com/Quantco/tabmat"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tabmat.ext.tabmat_ext"
python-source = "src"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = ["E731", "N802", "N803", "N806"]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["tabmat"]

[tool.mypy]
python_version = '3.10'
exclude = [
  "tests/",
]
no_implicit_optional = false
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.cibuildwheel]
skip = [
  "*-win32",
  "*-manylinux_i686",
  "*-musllinux_*",
  "cp38*",
  "cp39*",
]
test-requires = ["pytest", "pytest-xdist"]
test-command = "pytest {package}/tests/test_matrices.py"

[tool.cibuildwheel.macos]
before-build = "rustup target add aarch64-apple-darwin x86_64-apple-darwin"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "12.0"

[tool.cibuildwheel.linux]
before-build = "yum install -y openblas-devel || apt-get update && apt-get install -y libopenblas-dev; curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"

[tool.cibuildwheel.linux.environment]
PATH = "$HOME/.cargo/bin:$PATH"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"

[tool.cibuildwheel.windows.environment]
OPENBLAS_NO_AVX512 = "1"
